# dvc-stage

./: .gitmodules  .pre-commit-config.yaml  README.md  README.org  pyproject.toml  setup.py
.github/workflows/: docs.yaml  run_demo.yaml  test.yaml  tox-gh.yaml
examples/: dvc.yaml
examples/src/: demo.py
src/dvc_stage/: __init__.py  cli.py  common.py  config.py  loading.py  transforming.py  utils.py  validating.py  writing.py
