[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0.0"]

[project]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
  "dvc >= 2.12",
  "pandas >= 0.20",
  "pyyaml >= 5"
]
description = ""
dynamic = ["version"]
license = {text = "GPLv3"}
name = "dvc-stage"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
develop = [
  'autoflake',
  'black',
  'isort',
  'pre-commit',
  'pytest',
  'python-lsp-black',
  'python-lsp-server[all]',
  'ipykernel',
  'tox'
]

[project.scripts]
dvc-stage = "dvc_stage.cli:cli"

[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
# line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = {attr = "dvc_stage.__version__"}
